updated to add .js file

--- a/ProgrammingTask.html
+++ b/ProgrammingTask.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-	<head>
+	<title>
 		Programming Task - Ravi Inamdar
-	</head>
+		<script src="/ProgrammingTask.js"></script>
+	</title>
 	<body>
 		Hello World
+		<div>
+			<p>
+				This is where I will put paragraph text
+			</p>
+		</div>
 	</body>
 </html>
