updated script location

--- a/ProgrammingTask.html
+++ b/ProgrammingTask.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<title>
-		Programming Task - Ravi Inamdar
+  <head>
+		<title>
+			Programming Task - Ravi Inamdar
+		</title>
 		<script src="/ProgrammingTask.js"></script>
-	</title>
+	</head>
 	<body>
 		Hello World
 		<div>
