--- a/ProgrammingTask.html
+++ b/ProgrammingTask.html
@@ -4,6 +4,7 @@
 		<title>
 			Programming Task - Ravi Inamdar
 		</title>
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<script src="/ProgrammingTask.js"></script>
 	</head>
 	<body>
