added some comments

--- a/ProgrammingTask.html
+++ b/ProgrammingTask.html
@@ -4,7 +4,9 @@
 		<title>
 			Programming Task - Ravi Inamdar
 		</title>
+		<!-- The line below will allow the non-https data we are pulling in, accessible -->
 		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+		<!-- The line below pulls in our JS file that handles the logic for pulling data -->
 		<script src="/ProgrammingTask.js"></script>
 	</head>
 	<body>
