trying different method

--- a/ProgrammingTask.html
+++ b/ProgrammingTask.html
@@ -11,10 +11,7 @@
 	</head>
 	<body>
 		Hello World
-		<div>
-			<p>
-				This is where I will put paragraph text
-			</p>
+		<div id="taskTable">
 		</div>
 	</body>
 </html>
