testing table insertion

--- a/ProgrammingTask.html
+++ b/ProgrammingTask.html
@@ -11,7 +11,9 @@
 	</head>
 	<body>
 		Hello World
-		<div id="taskTable">
+		<div>
+			<table id="taskTable">
+			</table>
 		</div>
 	</body>
 </html>
