--- a/ProgrammingTask.html
+++ b/ProgrammingTask.html
@@ -11,9 +11,8 @@
 	</head>
 	<body>
 		Hello World
-		<div>
-			<table id="taskTable">
-			</table>
+		<div id = "taskTable">
+
 		</div>
 	</body>
 </html>
