--- a/ProgrammingTask.html
+++ b/ProgrammingTask.html
@@ -8,6 +8,9 @@
 		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<!-- The line below pulls in our JS file that handles the logic for pulling data -->
 		<script src="/ProgrammingTask.js"></script>
+		<link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css"
+		  integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5"
+		  crossorigin="anonymous">
 	</head>
 	<body>
 		Hello World
